# productivity-tools

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  install.sh
action-item-extractor/: .gitignore  BEGINNER-SETUP-GUIDE.md  README.md  collect.py  config.example.yaml  custom_rules.example.py  persona.example.yaml  pyproject.toml  requirements.txt  run-extract-tasks.sh  tim-config.example.yaml  tim-persona.example.yaml
action-item-extractor/automation/: cron.example  launchagent.example.plist  run.sh
action-item-extractor/engine/: ai_processor.py  config_loader.py  custom_rules.py  dedup.py  extraction_engine.py  extractor.py  google_auth.py  reply_detection.py  ticket_parser.py
action-item-extractor/examples/: engineering-manager-persona.yaml  founder-ceo-persona.yaml  vp-product-persona.yaml
action-item-extractor/outputs/: base_output.py  csv_output.py  markdown_output.py  obsidian_output.py
action-item-extractor/prompts/: triage.md
action-item-extractor/sources/: base_source.py  confluence_source.py  email_source.py  google_docs_source.py  google_sheets_source.py  jira_source.py  local_files_source.py  slack_source.py
action-item-extractor/tests/: conftest.py  test_ai_processor.py  test_config_loader.py  test_csv_output.py  test_custom_rules.py  test_dedup.py  test_email_source.py  test_extraction_engine.py  test_extractor.py  test_google_auth.py  test_google_docs_source.py  test_google_sheets_source.py  test_jira_source.py  test_local_files_source.py  test_markdown_output.py  test_noise_filter.py  test_obsidian_output.py  test_reply_detection.py  (+2 more)
(+40 files in other folders)
