[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "action-item-extractor"
version = "0.1.0"
description = "Extract action items from Slack, meetings, email, and more into Obsidian, markdown, or CSV"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "PyYAML>=6.0",
    "anthropic>=0.39.0",
    "requests>=2.31.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[tool.setuptools.packages.find]
include = ["engine*", "sources*", "outputs*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
